[project]
name = "custom_votify"
description = "A Python CLI app for downloading songs/podcasts from Spotify."
requires-python = ">=3.8"
authors = [{ name = "glomatico" }]
dependencies = [
    "click",
    "inquirerpy",
    "pillow",
    "protobuf",
    "pybase62",
    "pycryptodome",
    "pywidevine",
    "re-unplayplay",
    "yt-dlp",
]
readme = "README.md"
dynamic = ["version"]

[project.urls]
repository = "https://github.com/glomatico/custom_votify"

[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"

[project.scripts]
custom_votify = "custom_votify.cli:main"
